--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -10,8 +12,48 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="cst4701.game.pocketaccountant.MainActivity">
 
-    <TextView
+    <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        app:srcCompat="@android:drawable/ic_menu_add"
+        android:id="@+id/imageButton"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:background="@android:color/transparent"
+        android:onClick="openSettings"/>
+
+    <TextView
+        android:text="Pocket Accountant"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="106dp"
+        android:id="@+id/title"
+        android:textSize="36sp"
+        android:layout_below="@+id/imageButton"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="Continue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/title"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="72dp"
+        android:id="@+id/continueButton"
+        android:background="@android:color/holo_blue_light"
+        android:textAlignment="center"
+        android:fontFamily="sans-serif-medium"
+        android:onClick="openContinue"/>
+
+    <Button
+        android:text="New Game"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/newGameButton"
+        android:background="@android:color/holo_blue_light"
+        android:layout_below="@+id/continueButton"
+        android:layout_alignStart="@+id/continueButton"
+        android:layout_marginTop="14dp"
+        android:textAlignment="center"
+        android:onClick="openNewGame"/>
 </RelativeLayout>
