--- a/app/src/main/res/layout/activity_continue.xml
+++ b/app/src/main/res/layout/activity_continue.xml
@@ -26,7 +26,7 @@
         android:layout_marginTop="66dp"
         android:id="@+id/accountantImage"
         android:layout_below="@+id/countdownTimer"
-        android:layout_toEndOf="@+id/happyTitle" />
+         />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -89,10 +89,12 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@drawable/turkey"
         android:id="@+id/hungerIcon"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/hungerBar"
+        android:layout_toStartOf="@+id/happyBar" />
 
     <ProgressBar
         style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
