--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,38 +23,36 @@
         android:background="@android:color/transparent"
         android:onClick="openSettings"/>
 
-    <TextView
-        android:text="Pocket Accountant"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="106dp"
-        android:id="@+id/title"
-        android:textSize="36sp"
-        android:layout_below="@+id/imageButton"
-        android:layout_centerHorizontal="true" />
-
     <Button
         android:text="Continue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/title"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="72dp"
         android:id="@+id/continueButton"
         android:background="@android:color/holo_blue_light"
         android:textAlignment="center"
         android:fontFamily="sans-serif-medium"
-        android:onClick="openContinue"/>
+        android:onClick="openContinue"
+        android:layout_above="@+id/newGameButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/pocket_protector"
+        android:id="@+id/headerImage"
+        android:layout_marginBottom="30dp"
+        android:layout_alignBottom="@+id/continueButton"
+        android:layout_alignParentStart="true" />
 
     <Button
-        android:text="New Game"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/newGameButton"
         android:background="@android:color/holo_blue_light"
-        android:layout_below="@+id/continueButton"
-        android:layout_alignStart="@+id/continueButton"
-        android:layout_marginTop="14dp"
         android:textAlignment="center"
-        android:onClick="openNewGame"/>
+        android:onClick="openNewGame"
+        android:layout_marginBottom="52dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/continueButton" />
 </RelativeLayout>
