--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,17 +24,16 @@
         android:onClick="openSettings"/>
 
     <Button
-        android:text="Continue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
         android:id="@+id/continueButton"
-        android:background="@android:color/holo_blue_light"
+        android:background="@drawable/continue_button"
         android:textAlignment="center"
-        android:fontFamily="sans-serif-medium"
         android:onClick="openContinue"
         android:layout_above="@+id/newGameButton"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp" />
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="30dp" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -46,10 +45,10 @@
         android:layout_alignParentStart="true" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
         android:id="@+id/newGameButton"
-        android:background="@android:color/holo_blue_light"
+        android:background="@drawable/new_game_button"
         android:textAlignment="center"
         android:onClick="openNewGame"
         android:layout_marginBottom="52dp"
