--- a/app/src/main/res/layout/activity_continue.xml
+++ b/app/src/main/res/layout/activity_continue.xml
@@ -5,18 +5,64 @@
     android:id="@+id/activity_continue"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/background"
-    tools:context="cst4701.game.pocketaccountant.Continue">
+    tools:context="cst4701.game.pocketaccountant.Continue"
+    android:weightSum="1">
+
+
+    <ImageView
+        android:layout_width="@android:dimen/notification_large_icon_width"
+        android:layout_height="@android:dimen/notification_large_icon_height"
+        app:srcCompat="@mipmap/ic_launcher"
+        android:id="@+id/happyIcon"
+        android:layout_marginRight="57dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="23dp" />
+
+    <ImageView
+        android:layout_width="@android:dimen/notification_large_icon_width"
+        android:layout_height="@android:dimen/notification_large_icon_height"
+        app:srcCompat="@drawable/battery"
+        android:id="@+id/energyIcon"
+        android:layout_marginRight="57dp"
+        android:layout_alignTop="@+id/happyIcon"
+        android:layout_alignStart="@+id/funIcon" />
+
+    <ImageView
+        android:layout_height="@android:dimen/notification_large_icon_height"
+        app:srcCompat="@drawable/turkey"
+        android:id="@+id/hungerIcon"
+        android:layout_weight="0.27"
+        android:layout_marginBottom="25dp"
+        android:layout_width="@android:dimen/notification_large_icon_width"
+        android:layout_above="@+id/happyIcon"
+        android:layout_alignParentStart="true" />
+
+    <ProgressBar
+        style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
+        android:layout_height="wrap_content"
+        android:id="@+id/funBar"
+        android:indeterminate="false"
+        android:layout_alignTop="@+id/hungerBar"
+        android:layout_toEndOf="@+id/funIcon"
+        android:layout_width="120dp" />
+
+    <ProgressBar
+        style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
+        android:layout_height="wrap_content"
+        android:id="@+id/energyBar"
+        android:indeterminate="false"
+        android:layout_alignTop="@+id/happyBar"
+        android:layout_toEndOf="@+id/funIcon"
+        android:layout_width="120dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/countdownTimer"
         android:textSize="24sp"
+        android:layout_marginTop="13dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
@@ -26,85 +72,42 @@
         android:layout_marginTop="66dp"
         android:id="@+id/accountantImage"
         android:layout_below="@+id/countdownTimer"
-         />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_launcher"
-        android:id="@+id/energyIcon"
-        android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/countdownTimer" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_launcher"
-        android:id="@+id/funIcon"
-        android:layout_marginBottom="16dp"
-        android:layout_above="@+id/energyIcon"
-        android:layout_toEndOf="@+id/countdownTimer" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_launcher"
-        android:id="@+id/happyIcon"
-        android:layout_alignTop="@+id/funIcon"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true" />
 
     <ProgressBar
         style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/happyBar"
         android:indeterminate="false"
-        android:layout_alignBottom="@+id/funIcon"
-        android:layout_alignEnd="@+id/countdownTimer"
-        android:layout_alignTop="@+id/funIcon"
-        android:layout_toEndOf="@+id/happyIcon" />
+        android:layout_below="@+id/hungerIcon"
+        android:layout_toEndOf="@+id/hungerIcon"
+        android:layout_marginTop="22dp"
+        android:layout_width="120dp" />
 
     <ProgressBar
         style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/funBar"
-        android:indeterminate="false"
-        android:layout_alignBottom="@+id/funIcon"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/funIcon"
-        android:layout_toEndOf="@+id/funIcon" />
-
-    <ProgressBar
-        style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/energyBar"
-        android:indeterminate="false"
-        android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/energyIcon"
-        android:layout_below="@+id/funIcon"
-        android:layout_alignParentBottom="true" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/turkey"
-        android:id="@+id/hungerIcon"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/hungerBar"
-        android:layout_toStartOf="@+id/happyBar" />
-
-    <ProgressBar
-        style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:indeterminate="false"
         android:id="@+id/hungerBar"
-        android:layout_alignParentBottom="true"
+        android:layout_marginTop="24dp"
+        android:layout_alignTop="@+id/hungerIcon"
+        android:layout_toEndOf="@+id/hungerIcon"
+        android:layout_width="120dp" />
+
+    <ImageView
+        android:layout_width="@android:dimen/notification_large_icon_width"
+        android:layout_height="@android:dimen/notification_large_icon_height"
+        app:srcCompat="@mipmap/ic_launcher"
+        android:id="@+id/funIcon"
+        android:layout_marginRight="57dp"
+        android:layout_marginStart="13dp"
+        android:layout_alignTop="@+id/hungerIcon"
+        android:layout_toEndOf="@+id/hungerBar" />
+    <!--
+     android:layout_alignParentBottom="true"
         android:layout_below="@+id/funIcon"
         android:layout_alignEnd="@+id/countdownTimer"
-        android:layout_toEndOf="@+id/hungerIcon" />
+        android:layout_toEndOf="@+id/hungerIcon"
+    -->
 
 </RelativeLayout>
