added tombstone, briefcase; tried to set progress bars to invisible upon dead but it doesnt work

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,16 +13,6 @@
     android:background="@drawable/background"
     tools:context="cst4701.game.pocketaccountant.MainActivity">
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/ic_menu_add"
-        android:id="@+id/imageButton"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:background="@android:color/transparent"
-        android:onClick="openSettings"/>
-
     <Button
         android:layout_width="150dp"
         android:layout_height="50dp"
@@ -54,4 +44,15 @@
         android:layout_marginBottom="52dp"
         android:layout_alignParentBottom="true"
         android:layout_alignStart="@+id/continueButton" />
+
+    <ImageButton
+        app:srcCompat="@android:color/transparent"
+        android:id="@+id/settingsButton"
+        android:background="@drawable/briefcase_icon"
+        android:onClick="openSettings"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
