--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -27,7 +27,7 @@
         android:id="@+id/energyIcon"
         android:layout_marginRight="57dp"
         android:layout_alignTop="@+id/happyIcon"
-        android:layout_alignStart="@+id/funIcon" />
+        android:layout_alignStart="@+id/hygieneIcon" />
 
     <ImageView
         android:layout_height="@android:dimen/notification_large_icon_height"
@@ -42,10 +42,10 @@
     <ProgressBar
         style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
         android:layout_height="wrap_content"
-        android:id="@+id/funBar"
+        android:id="@+id/hygieneBar"
         android:indeterminate="false"
         android:layout_alignTop="@+id/hungerBar"
-        android:layout_toEndOf="@+id/funIcon"
+        android:layout_toEndOf="@+id/hygieneIcon"
         android:layout_width="120dp" />
 
     <ProgressBar
@@ -54,7 +54,7 @@
         android:id="@+id/energyBar"
         android:indeterminate="false"
         android:layout_alignTop="@+id/happyBar"
-        android:layout_toEndOf="@+id/funIcon"
+        android:layout_toEndOf="@+id/hygieneIcon"
         android:layout_width="120dp" />
 
     <TextView
@@ -89,8 +89,8 @@
     <ImageView
         android:layout_width="@android:dimen/notification_large_icon_width"
         android:layout_height="@android:dimen/notification_large_icon_height"
-        app:srcCompat="@mipmap/ic_launcher"
-        android:id="@+id/funIcon"
+        app:srcCompat="@drawable/soap"
+        android:id="@+id/hygieneIcon"
         android:layout_marginRight="57dp"
         android:layout_marginStart="13dp"
         android:layout_alignTop="@+id/hungerIcon"
