--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -13,7 +13,7 @@
     <ImageView
         android:layout_width="@android:dimen/notification_large_icon_width"
         android:layout_height="@android:dimen/notification_large_icon_height"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@drawable/paperwork"
         android:id="@+id/happyIcon"
         android:layout_marginRight="57dp"
         android:layout_alignParentBottom="true"
