--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -12,10 +12,12 @@
     tools:context="cst4701.game.pocketaccountant.Settings">
 
     <TextView
-        android:text="Settings Selected"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/textView3" />
+        android:id="@+id/settingsMessage"
+        android:layout_marginStart="11dp"
+        android:layout_marginTop="20dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:textSize="18sp" />
 </RelativeLayout>
